# m2m_protocol

./: .gitignore  BETA.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
aata_prototype/: README.md  build_artifact.py  export_evidence.py  pyproject.toml  requirements-biscuit.txt  requirements-cedar.txt  requirements-cosign.txt  requirements-llm.txt  requirements-nats.txt  requirements-otel.txt  requirements-spiffe.txt  requirements-worm.txt  requirements.txt  run_all.py  run_live.py
aata_prototype/aata/: __init__.py  behavioral.py  canonicalize.py  capability.py  clock.py  covert_channel.py  ddil.py  embodiment.py  fleet.py  gateway.py  hygiene.py  identity.py  irreversibility.py  pdp.py  recorder.py  sandbox.py  scenario.py
aata_prototype/console/: README.md  __init__.py  feed.py  publish.py  registry.py
aata_prototype/dashboard/: aata-dashboard.html  data.js  data.json  index.html
aata_prototype/demos/: blackout_drill.py  demo_all_real.py  demo_biscuit.py  demo_cedar.py  demo_cosign.py  demo_ebpf.py  demo_governance_console.py  demo_llm_agent.py  demo_nats.py  demo_otel.py  demo_redteam.py  demo_semantic_judge.py  demo_spiffe.py  demo_w1_hotpath.py  demo_w2_birth.py  demo_w3_hygiene.py  demo_worm.py  fleet_ops.py
aata_prototype/docs/: agent-onboarding.md  fleet_ops_brief.md  live-validation.md
aata_prototype/integrations/: __init__.py  wiring.py
aata_prototype/integrations/anthropic/: README.md  __init__.py  console.py  constitution.py  governed_tools.py  judge.py  llm_agent.py  redteam.py
aata_prototype/integrations/biscuit/: README.md  __init__.py  token.py
aata_prototype/integrations/cedar/: README.md  __init__.py  adapter.py  engine.py
aata_prototype/integrations/cosign/: README.md  __init__.py  manifest.py
aata_prototype/integrations/ebpf/: README.md  __init__.py  sensor.py
aata_prototype/integrations/nats/: README.md  __init__.py  bus.py  forwarder.py
aata_prototype/integrations/otel/: README.md  __init__.py  emitter.py
aata_prototype/integrations/spiffe/: README.md  __init__.py  svid.py
aata_prototype/integrations/worm/: README.md  __init__.py  archiver.py  backend.py
aata_prototype/policy/: constitution.rego
aata_prototype/tests/: test_biscuit.py  test_cedar.py  test_console.py  test_cosign.py  test_ddil.py  test_ebpf.py  test_end_to_end_real.py  test_fleet.py  test_governance_console.py  test_invariants.py  test_irreversibility.py  test_llm_agent.py  test_nats.py  test_otel.py  test_redteam.py  test_semantic_judge.py  test_spiffe.py  test_worm.py
aata_prototype/tests/live/: _live.py  test_nats_jetstream.py  test_s3_objectlock.py
console-web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
(+14 files in other folders)
